# The-new-college-entrance-examination-scoring-system

./: 1.txt  10000 50.xlsx  10000 55.xlsx  CMakeLists.txt  README.md  分数区间.txt  赋分计算.APS  赋分计算.cpp  赋分计算.h  赋分计算.sln  赋分计算.vcxproj  赋分计算.vcxproj.filters
